; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-zynqmp.c_xlnx_rtc_set_time.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-zynqmp.c_xlnx_rtc_set_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rtc_time = type { i32 }
%struct.xlnx_rtc_dev = type { i64, i64 }

@RTC_CALIB_MASK = common dso_local global i64 0, align 8
@RTC_CALIB_WR = common dso_local global i64 0, align 8
@RTC_SET_TM_WR = common dso_local global i64 0, align 8
@RTC_INT_SEC = common dso_local global i64 0, align 8
@RTC_INT_STS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.rtc_time*)* @xlnx_rtc_set_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xlnx_rtc_set_time(%struct.device* %0, %struct.rtc_time* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.rtc_time*, align 8
  %5 = alloca %struct.xlnx_rtc_dev*, align 8
  %6 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.rtc_time* %1, %struct.rtc_time** %4, align 8
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = call %struct.xlnx_rtc_dev* @dev_get_drvdata(%struct.device* %7)
  store %struct.xlnx_rtc_dev* %8, %struct.xlnx_rtc_dev** %5, align 8
  %9 = load %struct.rtc_time*, %struct.rtc_time** %4, align 8
  %10 = call i32 @rtc_tm_to_time64(%struct.rtc_time* %9)
  %11 = add nsw i32 %10, 1
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* @RTC_CALIB_MASK, align 8
  %14 = load %struct.xlnx_rtc_dev*, %struct.xlnx_rtc_dev** %5, align 8
  %15 = getelementptr inbounds %struct.xlnx_rtc_dev, %struct.xlnx_rtc_dev* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = and i64 %16, %13
  store i64 %17, i64* %15, align 8
  %18 = load %struct.xlnx_rtc_dev*, %struct.xlnx_rtc_dev** %5, align 8
  %19 = getelementptr inbounds %struct.xlnx_rtc_dev, %struct.xlnx_rtc_dev* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.xlnx_rtc_dev*, %struct.xlnx_rtc_dev** %5, align 8
  %22 = getelementptr inbounds %struct.xlnx_rtc_dev, %struct.xlnx_rtc_dev* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @RTC_CALIB_WR, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @writel(i64 %20, i64 %25)
  %27 = load i64, i64* %6, align 8
  %28 = load %struct.xlnx_rtc_dev*, %struct.xlnx_rtc_dev** %5, align 8
  %29 = getelementptr inbounds %struct.xlnx_rtc_dev, %struct.xlnx_rtc_dev* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @RTC_SET_TM_WR, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @writel(i64 %27, i64 %32)
  %34 = load i64, i64* @RTC_INT_SEC, align 8
  %35 = load %struct.xlnx_rtc_dev*, %struct.xlnx_rtc_dev** %5, align 8
  %36 = getelementptr inbounds %struct.xlnx_rtc_dev, %struct.xlnx_rtc_dev* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @RTC_INT_STS, align 8
  %39 = add nsw i64 %37, %38
  %40 = call i32 @writel(i64 %34, i64 %39)
  ret i32 0
}

declare dso_local %struct.xlnx_rtc_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @rtc_tm_to_time64(%struct.rtc_time*) #1

declare dso_local i32 @writel(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
